--- a/style.css
+++ b/style.css
@@ -49,11 +49,34 @@ section{
     font-weight: 700;
     cursor: default;
 }
+.navbar {
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+}
 .navbar a{
+    position: relative;
+    padding: 10px 15px;
+    text-decoration: none;
+
+
     font-size: 1.5rem;
     color: var(--text-color);
     margin-left: 4rem;
     font-weight: 700;
+}
+.navbar a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: var(--main-color); /* Color of the underline */
+    transition: width 0.3s ease;
+}
+.navbar a:hover::after{
+    width: 100%;
 }
 .navbar a:hover, .navbar a:active{
     color: var(--text-color);
